<resources>
    <string name="app_name">WhipIt Assistant</string>
    <string name="title_activity_main">WhipIt Assistant</string>
    <string name="main_btn_ingredients">Ingredients</string>
    <string name="main_btn_recipes">Recipes</string>
    <string name="main_logo_description">WhipIt Logo</string>

    <string name="title_activity_ingredient_list">Ingredients</string>
    <string name="title_activity_recipe_list">Recipes</string>

    <string name="ok">OK</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="edit">Edit</string>
    <string name="save">Save</string>
    <string name="add">Add</string>

    <string name="confirm_delete_ingred_question">Delete ingredient \'%1$s\'?</string>
    <string name="confirm_delete_recipe_question">Delete recipe \'%1$s\'?</string>
    <string name="confirm_delete_measure_question">Delete ingredient \'%1$s\' from recipe?</string>
    <string name="toast_msg_ingred_deleted">Ingredient \'%1$s\' deleted</string>
    <string name="toast_msg_recipe_deleted">Recipe \'%1$s\' deleted</string>

    <string name="title_activity_ingredient_editor">Ingredient Editor</string>
    <string name="edit_ingred_name">Name</string>
    <string name="edit_ingred_dollarSign">$</string>
    <string name="edit_ingred_unit_cost">Unit Cost</string>
    <string name="edit_ingred_per">/</string>

    <string name="edit_ingred_error_name">Name must not be blank</string>
    <string name="edit_ingred_error_non_unique">An ingredient with this name already exists</string>
    <string name="edit_ingred_error_cost">Cost must be a number</string>
    <string name="toast_msg_ingred_saved">Saved ingredient \'%1$s\'</string>
    <string name="toast_msg_ingred_created">Created ingredient \'%1$s\'</string>
    <string name="toast_msg_ingred_failed">Could not save ingredient \'%1$s\'</string>

    <string name="title_activity_recipe_editor">Recipe Editor</string>
    <string name="edit_recipe_name">Name</string>
    <string name="edit_recipe_yield">Yield</string>
    <string name="edit_recipe_description">Description (optional)</string>
    <string name="edit_recipe_ingredients">Ingredients</string>

    <string name="edit_recipe_error_name">Name must not be blank</string>
    <string name="edit_recipe_error_non_unique">A recipe with this name already exists</string>
    <string name="edit_recipe_error_yield">Yield must be a number</string>
    <string name="toast_msg_recipe_saved">Saved recipe \'%1$s\'</string>
    <string name="toast_msg_recipe_created">Created recipe \'%1$s\'</string>
    <string name="toast_msg_recipe_failed">Could not save recipe \'%1$s\'</string>

    <string name="dialog_title_select_ingredient">Select Ingredient</string>
    <string name="dialog_title_edit_measure">Measure of %1$s</string>
    <string name="dialog_hint_measure">Amount</string>
</resources>
