<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".base.MainActivity">

    <ImageView
            android:id="@+id/main_logo"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/main_logoHeight"
            android:src="@drawable/logo"
            android:scaleType="fitCenter"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:contentDescription="@string/main_logo_description"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/main_logo">

        <Button
            android:id="@+id/btn_ingredients"
            android:layout_width="match_parent"
            android:layout_height="@dimen/main_btnHeight"
            android:text="@string/main_btn_ingredients" />

        <Button
            android:id="@+id/btn_recipes"
            android:layout_width="match_parent"
            android:layout_height="@dimen/main_btnHeight"
            android:text="@string/main_btn_recipes" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>
