<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/form_padding"
        android:orientation="vertical"
        tools:context=".RecipeEditActivity"
        tools:showIn="@layout/activity_recipe_edit">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_recipe_name"
            android:labelFor="@id/edit_recipe_name"
            android:textSize="@dimen/edit_labelSize"/>

    <EditText
            android:id="@+id/edit_recipe_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapWords"
            android:layout_marginBottom="@dimen/form_padding"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/edit_labelSize"
            android:labelFor="@id/edit_recipe_yield"
            android:text="@string/edit_recipe_yield"/>

    <EditText
            android:id="@+id/edit_recipe_yield"
            android:layout_width="@dimen/editText_num_width"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:layout_marginBottom="@dimen/form_padding"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/edit_labelSize"
            android:labelFor="@id/edit_recipe_description"
            android:text="@string/edit_recipe_description"/>

    <EditText
            android:id="@+id/edit_recipe_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:layout_marginBottom="@dimen/form_padding"/>

</LinearLayout>
