<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".recipe.RecipeEditActivity"
        tools:showIn="@layout/activity_recipe_edit">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/form_padding">

        <Button
                android:id="@+id/edit_recipe_add_ingred"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="?android:attr/buttonBarButtonStyle"
                android:text="@string/add"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/edit_recipe_edit_ingred"/>
        <Button
                android:id="@+id/edit_recipe_edit_ingred"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="?android:attr/buttonBarButtonStyle"
                android:text="@string/edit"
                app:layout_constraintStart_toEndOf="@id/edit_recipe_add_ingred"
                app:layout_constraintEnd_toStartOf="@+id/edit_recipe_delete_ingred"/>
        <Button
                android:id="@+id/edit_recipe_delete_ingred"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="?android:attr/buttonBarButtonStyle"
                android:text="@string/delete"
                app:layout_constraintStart_toEndOf="@id/edit_recipe_edit_ingred"
                app:layout_constraintEnd_toEndOf="parent"/>
    </LinearLayout>

    <ListView
            android:id="@+id/edit_recipe_ingredient_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:choiceMode="singleChoice"
            android:listSelector="@color/color_listSelector">
    </ListView>

    <!--<include layout="@layout/fab_add" />-->

</LinearLayout>
